# django-generic-helpers

./: .coveragerc  .gitignore  .travis.yml  AUTHORS  CHANGELOG.rst  MANIFEST.in  Makefile  Pipfile  README.rst  bump2version.ini  coverage.ini  coverage.rc  flake8.ini  pyproject.toml  pytest.ini  setup.cfg  setup.py  tests.py  tox.ini
.github/workflows/: tox.yml
docs/: authors.rst  changelog.rst  conf.py  index.rst  installation.rst  synopsis.rst  usage.rst
generic_helpers/: __init__.py  admin.py  compat.py  decorators.py  fields.py  forms.py  managers.py  models.py  pytest_plugin.py  settings.py  utils.py
generic_helpers/tests/: __init__.py  models.py
src/generic_helpers/: checks.py  fields.py  managers.py  settings.py  utils.py
tests/: __test_2.py  conftest.py  test_1.py  test_2.py  test_decorators.py  test_fields.py  test_manager.py  test_models.py  test_regressions.py  test_utils.py
tests/test_project/: models.py  settings.py
