[metadata]
name = django-generic-helpers
version = 1.0.0
author = Mikhail Porokhovnichenko
author_email = marazmiki@gmail.com
url = https://github.com/marazmiki/django-generic-helpers
download_url = DOWNLOAD_URL
description =
    The small frameworks that helps to write
    reusable django apps with generic relations
long_description=file: README.rst
license = MIT license
platforms =
    OS Independent
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 1.10
    Framework :: Django :: 1.11
    Framework :: Django :: 2.0
    Framework :: Django :: 2.1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
[options]
zip_safe = True
packages = find:

[bdist_wheel]
universal = 1

;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
;; coverage settings
;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;

[coverage:run]
source = generic_helpers
branch = True
omit =
    .tox/*

[coverage:report]
omit =
    .tox/*
exclude_lines =
    pragma: no cover
    def __repr__
    self.fail\(
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:


;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
;; flake8 settings
;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;

[flake8]
exclude =
    docs/conf.py

;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
;; py.test settings
;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;

[tool:pytest]
addopts =
    -s
    -v
    --cov-config setup.cfg
    --cov-report term-missing
    --cov-report term:skip-covered
    --cov-append
    --cov=.
    --no-migrations
    --ds=test_project.settings


;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
;; tox settings
;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;

[tox:tox]
envlist =
    py{27}-dj{111}
    py{34,35,36,37}-dj{111,20,21}
basepython =
    py27: python2.7
    py34: python3.4
    py35: python3.5
    py36: python3.6
    py37: python3.7
[testenv]
deps =
    pytest
    pytest-cov
    pytest-django
    pytest-flake8
    pytest-isort
    coverage
    coveralls
    dj111: django>=1.11,<2.0
    dj20: django>=2.0,<2.1
    dj21: django>=2.1,<2.2

commands =
    pip install -e .
    pytest {posargs}

whitelist_externals =
    pytest

setenv =
    PYTHONPATH=tests
