[metadata]
name = django-generic-helpers
version = 1.0.3
author = Mikhail Porokhovnichenko
author_email = marazmiki@gmail.com
url = https://github.com/marazmiki/django-generic-helpers
download_url = https://github.com/marazmiki/django-generic-helpers/archive/master.zip
description = A small toolset that helps you to work with Django's generic relations
long_description=file: README.rst
license = MIT license
platforms =
    OS Independent
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 1.10
    Framework :: Django :: 1.11
    Framework :: Django :: 2.0
    Framework :: Django :: 2.1
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
zip_safe = True
packages = find:

[bdist_wheel]
universal = 1

;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
;; coverage settings
;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;

[coverage:run]
source = generic_helpers
branch = True
omit =
    .tox/*

[coverage:report]
omit =
    .tox/*
exclude_lines =
    pragma: no cover
    def __repr__
    self.fail\(
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:


;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
;; flake8 settings
;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;

[flake8]
exclude =
    docs/conf.py

;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
;; py.test settings
;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;

[tool:pytest]
python_paths =
    tests/

addopts =
    -s
    -v
    --cov-config setup.cfg
    --cov-report term-missing
    --cov-report term:skip-covered
    --cov-append
    --cov=.
    ; pytest-django stuff
    --no-migrations
    --ds=test_project.settings
    --isort
    --flake8

;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
;; tox settings
;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;

[tox:tox]
envlist =
    py{27}-dj{111}
    py{34,35,36,37,38}-dj{111,20}
    py{35,36,37,38}-dj{21,22}
    py{36,37,38}-dj{30}

basepython =
    py27: python2.7
    py34: python3.4
    py35: python3.5
    py36: python3.6
    py37: python3.7
    py38: python3.8

[testenv]
deps =
    coverage
    coveralls
    pytest
    pytest-cov
    pytest-django
    pytest-flake8
    pytest-isort
    pytest-pythonpath
    pytest-sugar
    flake8-pep3101
    flake8-print
    flake8-pytest
    dj110: django>=1.10,<1.11
    dj111: django>=1.11,<2.0
    dj20: django>=2.0,<2.1
    dj21: django>=2.1,<2.2
    dj22: django>=2.2,<2.3
    dj30: django>=3.0,<3.1


commands =
    pip install -e .
    pytest {posargs}

whitelist_externals =
    pytest

